k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pe-eng-transaction-processor-dev
  labels:
    app.kubernetes.io/name: transaction-processor
    app.kubernetes.io/version: "2.0.1"
    app.kubernetes.io/part-of: banking-platform
    environment: dev
    managed-by: helm
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: transaction-processor
    environment: dev
